--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Github Users MVP</string>
-    <string name="search_title">Search...</string>
+    <string name="search_hint">Search...</string>
 </resources>
