--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">Github Users MVP</string>
+    <string name="activity_user_list_title">Github Users</string>
+    <string name="double_back_to_exit">Click one more time to exit</string>
     <string name="search_hint">Search...</string>
     <string name="close">Tutup</string>
+    <string name="no_result">No Result</string>
     <string name="no_internet_title">No Internet Connection</string>
     <string name="no_internet_text">Please check your connection</string>
     <string name="api_limit_exceeded_title">Request Limit Exceeded</string>
